--- a/polls/templates/polls/poll_toggle_lock.html
+++ b/polls/templates/polls/poll_toggle_lock.html
@@ -2,14 +2,15 @@
 
 {% extends "polls/generic_message.html" %}
 
-{% block title %}{{ action }} poll?{% endblock %}
+{% block title %}{{ action }} голосование?{% endblock %}
 {% block icon %}⚠{% endblock %}
 {% block icon_color %}#FFD700{% endblock %}
 {% block return %}{% endblock %}
-{% block message %}Are you sure you want to {{ action|lower }} poll "{{ poll_title }}"?
+{% block message %}Вы действительно хотите {{ action|lower }} голосование &laquo; {{ poll_title }} &raquo;?
     <div class="mt-3 d-flex justify-content-center gap-2">
-        <form method="post" action="{% url 'poll_toggle_lock' poll_id %}">
+        <form method="post" action="{% url 'poll_toggle_lock_confirm' poll_id new_status %}">
             {% csrf_token %}
+            <input type="hidden" id="new_status">{{ new_status }}</input>
             <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
 
