--- a/polls/templates/polls/poll_toggle_lock.html
+++ b/polls/templates/polls/poll_toggle_lock.html
@@ -6,14 +6,15 @@
 {% block icon %}⚠{% endblock %}
 {% block icon_color %}#FFD700{% endblock %}
 {% block return %}{% endblock %}
-{% block message %}Вы действительно хотите {{ action|lower }} голосование &laquo; {{ poll_title }} &raquo;?
+{% block message %}Вы действительно хотите {{ action|lower }} голосование &laquo;{{ poll_title }}&raquo;?
     <div class="mt-3 d-flex justify-content-center gap-2">
-        <form method="post" action="{% url 'poll_toggle_lock_confirm' poll_id new_status %}">
+        <form method="post" action="{% url 'poll_toggle_lock_confirm' %}">
+            <input type="hidden" name="poll_id" value="{{ poll_id }}">
+            <input type="hidden" name="new_status" value="{{ new_status }}">
             {% csrf_token %}
-            <input type="hidden" id="new_status">{{ new_status }}</input>
-            <button type="submit" class="btn btn-primary">Confirm</button>
+            <button type="submit" class="btn btn-primary">Подтвердить</button>
         </form>
 
-        <a href="{% url 'poll_list' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'poll_list' %}" class="btn btn-secondary">Отмена</a>
     </div>
 {% endblock %}
