--- a/polls/templates/polls/work_in_progress.html
+++ b/polls/templates/polls/work_in_progress.html
@@ -1,8 +1,8 @@
-<!-- polls/templates/work_in_progress.html -->
-
 {% extends "polls/generic_message.html" %}
-
-{% block title %}Work in Progress{% endblock %}
-{% block icon %}🚧{% endblock %}  {# Construction icon for work in progress #}
-{% block icon_color %}#FFD700{% endblock %}  {# Gold color for construction icon #}
-{% block message %}This page is currently under construction. Please check back later.{% endblock %}
+{% block title %}Страница в разработке{% endblock %}
+{% block icon %}🚧{% endblock %}
+{% block icon_color %}#FFD700{% endblock %}
+{% block message %}Эта страница пока в разработке. Загляните позже.{% endblock %}
+{% block buttons %}
+  <a href="{% url 'poll_list' %}" class="btn btn-secondary">Вернуться к списку голосований</a>
+{% endblock %}
